# pyrust-check

./: .gitignore  CHANGELOG.md  Cargo.toml  MVP_ROADMAP.md  README.md  ROADMAP.md  clippy.toml  example.py  rustfmt.toml
.github/ISSUE_TEMPLATE/: false_positive.md
.github/workflows/: benchmarks.yml  docs.yml
dev_logs/: 2025-12-01_phase-0.md
docs/guides/: editor-integration.md
docs/internals/: constraint-solving.md  parallel-processing.md
docs/reference/: guide.md  initial-architecture-design.md
examples/: basic_usage.rs  batch_check.rs  custom_checker.rs  parse_only.rs
scripts/: check_coverage.sh  compare_mypy.sh  release.sh  run_benchmarks.sh  run_tests.sh
src/: lib.rs  main.rs
src/cache/: file_cache.rs  serialization.rs  type_cache.rs
src/checker/: checker_impl.rs  constraints.rs  context.rs  expressions.rs  inheritance.rs  mod.rs  overrides.rs  solver.rs  statements.rs
src/cli/: interactive.rs  output.rs
src/config/: defaults.rs  loader.rs  settings.rs
src/diagnostics/: error.rs  mod.rs  reporter.rs  suggestions.rs
src/lsp/: diagnostics.rs  handlers.rs  server.rs
src/parallel/: coordinator.rs  pool.rs
src/parser/: ast.rs  mod.rs  parser_impl.rs  visitor.rs
src/symbols/: builtins.rs  mod.rs  resolver.rs  scope.rs  symbol.rs  table.rs
src/types/: classes.rs  functions.rs  generics.rs  inference.rs  mod.rs  primitives.rs  protocols.rs  unions.rs
src/utils/: arena.rs  intern.rs  mod.rs  mro.rs  span.rs
tests/common/: fixtures.rs  mod.rs
tests/integration/: test_complex_cases.rs  test_generics.rs  (+1 more)
tools/: compare_with_mypy.py
