# Main package manifest
[package]
name = "pyrust-check"
version = "0.1.0"
edition = "2024"
authors = ["Sanchit Jain <Undiluted7027@proton.me>"]
license = "MIT"
description = "A fast Python type checker built in Rust"
repository = "https://github.com/Undiluted7027/pyrust-check"
keywords = ["python", "type-checker", "static-analysis", "rust"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
dashmap = "6.1.0"
rayon = "1.11.0"
rustpython-parser = "0.4.0"
thiserror = "2.0.17"

[dev-dependencies]
criterion = { version = "0.8.0", features = ["html_reports"] }
pretty_assertions = "1.4.1"

# [[bench]]
# name = "parser_bench"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1